# natrix

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  THIRD_PARTY_LICENSE.txt  example.ntx
doc/: grammar.md
include/natrix/parser/: ast.h  diag.h  lexer.h  parser.h  source.h  token.h  token_types.inc
include/natrix/util/: arena.h  gc.h  gc_internals.h  log.h  mem.h  panic.h  sb.h
src/: main.c
src/parser/: ast.c  diag.c  lexer.c  parser.c  source.c  token.c
src/util/: arena.c  gc.c  log.c  mem.c  panic.c  sb.c
test/: CMakeLists.txt  gc_state.h  test_example.cpp
test-data/: test_indent_too_deep.ntx
test-data/parser/: comparison.ntx  comparison.out  if.ntx  if.out  list_literal.ntx  list_literal.out  simple_expr.ntx  simple_expr.out  while.ntx  while.out
test/parser/: test_ast.cpp  test_lexer.cpp  test_parser.cpp  test_source.cpp  test_token.cpp
test/util/: test_arena.cpp  test_gc.cpp  test_mem.cpp  test_sb.cpp
